--- a/app/src/main/res/layout/checkitem_list_item.xml
+++ b/app/src/main/res/layout/checkitem_list_item.xml
@@ -6,10 +6,16 @@
               android:layout_height="wrap_content">
     <CheckBox
             android:id="@+id/checkbox"
+            android:layout_gravity="center_vertical"
             android:layout_width="wrap_content" android:layout_height="wrap_content" />
     <TextView
             android:id="@+id/text"
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:layout_width="0dp" android:layout_height="wrap_content" />
+    <androidx.appcompat.widget.ActionMenuView
+            android:id="@+id/actions_bar"
             android:layout_width="wrap_content" android:layout_height="wrap_content" />
 </LinearLayout>
