--- a/app/src/main/res/menu/checklist_actions.xml
+++ b/app/src/main/res/menu/checklist_actions.xml
@@ -3,6 +3,9 @@
     <item android:title=""
           android:id="@+id/edit_checklist"
           android:icon="@android:drawable/ic_menu_edit"
-          app:showAsAction="always"
-          android:orderInCategory="1"/>
+          app:showAsAction="always" />
+    <item android:title=""
+          android:id="@+id/add_checkitem"
+          android:icon="@android:drawable/ic_input_add"
+          app:showAsAction="always"/>
 </menu>
