--- a/app/src/main/res/layout/activity_videocall.xml
+++ b/app/src/main/res/layout/activity_videocall.xml
@@ -4,22 +4,25 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         tools:context=".activities.VideoCallActivity">
     <FrameLayout
+            android:id="@+id/fragment_container"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-        <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/subscriber_containers"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
-        <FrameLayout
-                android:layout_width="90dp"
-                android:layout_height="120dp"
-                android:id="@+id/publisher_container"
-                android:layout_gravity="bottom|end"
-                android:layout_marginBottom="16dp"
-                android:layout_marginEnd="16dp"
-                android:padding="2dp"
-                android:background="#FFFFFF" />
-    </FrameLayout>
+            android:layout_height="match_parent" />
+    <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/subscriber_containers"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+    <FrameLayout
+            android:layout_width="90dp"
+            android:layout_height="120dp"
+            android:id="@+id/publisher_container"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_gravity="bottom|end"
+            android:layout_marginBottom="16dp"
+            android:layout_marginEnd="16dp"
+            android:padding="2dp"
+            android:background="#FFFFFF" />
 </androidx.constraintlayout.widget.ConstraintLayout>
