--- a/app/src/main/res/layout/subscriber_list_item.xml
+++ b/app/src/main/res/layout/subscriber_list_item.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="90dp"
-             android:layout_height="120dp"
-             android:padding="2dp"
-             android:layout_margin="16dp" />
+<com.project.trello_fintech.views.ExpandableConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:padding="15dp"
+        android:layout_width="105dp"
+        android:layout_height="135dp">
+    <FrameLayout android:layout_width="match_parent"
+                 android:layout_height="match_parent"
+                 android:id="@+id/subscriber_view"/>
+</com.project.trello_fintech.views.ExpandableConstraintLayout>
