--- a/app/src/main/res/layout/subscriber_list_item.xml
+++ b/app/src/main/res/layout/subscriber_list_item.xml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.project.trello_fintech.views.ExpandableConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
         android:padding="15dp"
         android:layout_width="105dp"
         android:layout_height="135dp">
     <FrameLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
-                 android:id="@+id/subscriber_view"/>
+                 android:id="@+id/subscriber"/>
+    <TextView android:id="@+id/username"
+              android:textColor="@color/colorWhite"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              app:layout_constraintBottom_toBottomOf="parent"
+              android:textAlignment="center"/>
 </com.project.trello_fintech.views.ExpandableConstraintLayout>
