--- a/app/src/main/res/layout/fragment_task_detail.xml
+++ b/app/src/main/res/layout/fragment_task_detail.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
         <import type="android.view.View" />
@@ -58,8 +58,7 @@
                         app:text="Описание"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
-                <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/description"
+                <com.project.trello_fintech.views.UnderlineOnClickEditText
                         android:text="@={viewModel.task.description}"
                         android:layout_height="wrap_content"
                         android:layout_width="match_parent"
@@ -67,8 +66,28 @@
                         android:paddingStart="10dp"
                         android:paddingEnd="10dp"
                         android:minHeight="50dp" />
+                <com.project.trello_fintech.views.TaskDetailSectionView
+                        app:text="URL ветки разработки (VCS)"
+                        app:iconSrc="@drawable/vcs_icon"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+                <LinearLayout
+                        android:paddingStart="10dp"
+                        android:paddingEnd="10dp"
+                        android:layout_width="match_parent" android:layout_height="wrap_content">
+                    <ImageView
+                            android:paddingEnd="10dp"
+                            app:vcsUrl="@{viewModel.firebaseData.vcsUrl}"
+                            android:layout_width="45dp" android:layout_height="45dp" tools:ignore="RtlSymmetry"/>
+                    <com.project.trello_fintech.views.UnderlineOnClickEditText
+                            android:text="@={viewModel.firebaseData.vcsUrl}"
+                            android:minHeight="50dp"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"/>
+                </LinearLayout>
                 <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/checklists"
+                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
                 <com.project.trello_fintech.views.TaskDetailSectionView
@@ -90,7 +109,7 @@
                         android:layout_width="match_parent" android:layout_height="wrap_content"/>
                 <Button
                         android:id="@+id/task_history"
-                        android:drawableLeft="?attr/actionModePasteDrawable"
+                        android:drawableStart="?attr/actionModePasteDrawable"
                         android:text="@string/changes_history"
                         android:layout_width="match_parent" android:layout_height="wrap_content"/>
             </LinearLayout>
