--- a/app/src/main/res/layout/fragment_task_detail.xml
+++ b/app/src/main/res/layout/fragment_task_detail.xml
@@ -72,6 +72,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"/>
                 <LinearLayout
+                        android:orientation="horizontal"
                         android:paddingStart="10dp"
                         android:paddingEnd="10dp"
                         android:layout_width="match_parent" android:layout_height="wrap_content">
@@ -82,8 +83,14 @@
                     <com.project.trello_fintech.views.UnderlineOnClickEditText
                             android:text="@={viewModel.firebaseData.vcsUrl}"
                             android:minHeight="50dp"
-                            android:layout_width="match_parent"
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
                             android:layout_height="wrap_content"/>
+                    <ImageButton
+                            android:src="@android:drawable/ic_menu_search"
+                            android:background="@color/colorWhite"
+                            android:onClick="@{() -> viewModel.openVCSUrl()}"
+                            android:layout_width="50dp" android:layout_height="50dp"/>
                 </LinearLayout>
                 <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/checklists"
