--- a/app/src/main/res/layout/fragment_task_detail.xml
+++ b/app/src/main/res/layout/fragment_task_detail.xml
@@ -10,6 +10,7 @@
             android:layout_width="match_parent"
             android:background="@color/colorWhite"
             android:clickable="true"
+            android:paddingBottom="30dp"
             android:layout_height="match_parent">
         <com.google.android.material.appbar.AppBarLayout
                 app:layout_constraintTop_toTopOf="parent"
@@ -53,6 +54,7 @@
                             android:text="@{viewModel.task.dueDate}"
                             android:layout_width="match_parent" android:layout_height="wrap_content" />
                 </LinearLayout>
+
                 <com.project.trello_fintech.views.TaskDetailSectionView
                         app:iconSrc="@drawable/description_icon"
                         app:text="Описание"
@@ -66,6 +68,7 @@
                         android:paddingStart="10dp"
                         android:paddingEnd="10dp"
                         android:minHeight="50dp" />
+
                 <com.project.trello_fintech.views.TaskDetailSectionView
                         app:text="URL ветки разработки (VCS)"
                         app:iconSrc="@drawable/vcs_icon"
@@ -97,6 +100,7 @@
                         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
+
                 <com.project.trello_fintech.views.TaskDetailSectionView
                         app:iconSrc="@drawable/participants_icon"
                         app:text="@string/participants"
@@ -106,6 +110,7 @@
                         android:padding="10dp"
                         android:clickable="true"
                         android:layout_width="match_parent" android:layout_height="wrap_content" />
+
                 <com.project.trello_fintech.views.TaskDetailSectionView
                         app:iconSrc="@drawable/attachment_icon"
                         app:text="@string/attachments"
@@ -118,6 +123,25 @@
                         android:id="@+id/task_history"
                         android:drawableStart="?attr/actionModePasteDrawable"
                         android:text="@string/changes_history"
+                        android:layout_width="match_parent" android:layout_height="wrap_content"/>
+
+
+                <com.project.trello_fintech.views.TaskDetailSectionView
+                        app:text="@string/comments"
+                        app:iconSrc="@drawable/comments_icon"
+                        android:layout_width="match_parent" android:layout_height="wrap_content" />
+                <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/comment_input"
+                        android:inputType="textMultiLine"
+                        android:hint="@string/comment_input_hint"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+                <Button
+                        android:id="@+id/add_comment"
+                        android:text="@string/send"
+                        android:layout_width="wrap_content" android:layout_height="wrap_content" />
+                <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/comments"
                         android:layout_width="match_parent" android:layout_height="wrap_content"/>
             </LinearLayout>
         </ScrollView>
